outline/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
  labels:
    app: outline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outline
  template:
    metadata:
      labels:
        app: outline
    spec:
      containers:
      - name: outline
        image: outline
        ports:
        - containerPort: 3000
